--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width">
         <meta name="author" content="vineela">
+        <meta name="description" content="Affordable and professional web design">
+        <meta name="keywords" content="web design,professional web design,affordable web design,">
         <meta charset="utf-8">
         <title>Acme Web Design | welcome</title>
         <link rel="stylesheet" href="./css/style.css">
